# control

./: .env.example  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
.github/: PULL_REQUEST_TEMPLATE.md
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/permissions/: tray-commands.toml
apps/shell/src-tauri/src/: main.rs
plans/: 001-verification-baseline.md  002-adopted-runs-stoppable.md  003-run-lifecycle-guards.md  004-localhost-security-hardening.md  005-metrics-and-chrome-perf.md  006-overview-fetch-and-sampling.md  007-shell-daemon-lifecycle.md  008-docs-refresh.md  009-dx-lint-agents-ci.md  010-direction-spikes.md  011-pty-attach-and-xterm-copy.md  012-project-port-labels.md  013-oss-license-and-security.md  014-oss-readme.md  015-oss-contributing.md  016-windows-ci.md  032-env-files.md  033-loading-kit-primitives.md  034-query-loading-vs-empty.md  035-dashboard-loading-skeletons.md  036-claude-launch-json.md  037-hide-action-module-ui.md  038-past-run-logs.md  039-daemon-dev-watch.md  040-split-dev-port-sync.md  041-dev-loop-scripts.md  042-vendored-node-portable.md  README.md
scripts/: bump-version.mjs  control-port.mjs  dev.mjs  kill-daemon.mjs  make-portable.mjs  run-daemon-dev.mjs  stage-runtime.mjs  tauri-with-msvc.mjs
(+96 files in other folders)
