[package]
name = "control-shell"
version = "0.1.0"
description = "CONTROL — Local Dev Command Center"
edition = "2021"
rust-version = "1.77"
autobins = false

[[bin]]
name = "Control"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
